[project]
name = "ConsumerCompass"
version = "0.1.0"
description = "A comprehensive business review comparison tool powered by Google Places API"
requires-python = ">=3.11"
dependencies = [
    "googlemaps>=4.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "streamlit>=1.41.1",
]
